Version 5.0.1
-------------

  features
   - implementation of afb_job_abort
   - added management of common session UUID
   - allows creation of events in pre-init state
   - implement service exiting and afb_ctlid_Exiting

  fixes
   - race in awaiting evmgr
   - afb_sched_mode behaviour

  minor/details
   - analysis tools improvements

Version 5.0.0
-------------

  features
   - relies on rp-libutils
   - integration of RPC WSAPI version 3
   - tuning of RPC version at build

  fixes
   - issue in includes
   - fix deadlock in querying cynagora

  minor/details
   - schedule the callback of cynagora permission
   - numeric error code to reply "disconnected"

Version 4.1.0
-------------

  features
   - depends of afb-binding >= 4.1.0
   - full rewrite of the scheduler
   - add a module to handle pool of threads
   - improved version of afb-extend interface (less requirement on json objects)
   - add function for dequeuing multiple jobs
   - add a wakeup time when preparing event loop
   - add functions to get verbs of api v4
   - implement get/set of userdata for requests v4
   - allows hooking of interface queries
   - deliver a static library for libafbcli
   - allow to disable stack dump
   - provide a linker version script for extensions
   - new function for extensions, AfbExtensionGetOptionsV1

  fixes
   - fix correct apiset (callset) for required features
   - fix the macros LIBAFB_BEFORE_VERSION and LIBAFB_AFTER_VERSION
   - fix issue on timer management
   - fix deprecated hooks of LIBC
   - fix definitions in afb-v4.h
   - fix expiration of afb_sched_enter and change its logic
   - fix timer used for expiration to be REALTIME_CLOCK
   - fix compiling with WITH_AFB_CALL_SYNC=OFF
   - fix timer reference (critical)
   - fix encoding of data copy
   - fix size indicator of AFBRPCv2
   - fix double close on initialisation error
   - fix configuration of extensions

  minor/details
   - fix declarations in afb-api-v4 and improved API